--- a/projects/mirage/index.html
+++ b/projects/mirage/index.html
@@ -12,7 +12,7 @@
 </script>
 
 
-<link rel="stylesheet" href="/main.cc28a79cd5d28f43e9d9b525bdabe76813d27bfaeda18d67045351537988c5e32410ce5a720509323f70b6b0f77adb0d70b6a544ba50d135d6f48ff57e846f2a.css" integrity="sha512-zCinnNXSj0Pp2bUlvavnaBPSe/rtoY1nBFNRU3mIxeMkEM5acgUJMj9wtrD3etsNcLalRLpQ0TXW9I/1foRvKg==" crossorigin="anonymous">
+<link rel="stylesheet" href="/main.1a7cb924fb7002871042dc25a2ed898ae8a64fd770a7dfcb55ebed5385891db4f6a39ed3d2a9e83e9c222deebc65bb1667eac5a274c73baa698a42aa097a25b6.css" integrity="sha512-Gny5JPtwAocQQtwlou2JiuimT9dwp9/LVevtU4WJHbT2o57T0qnoPpwiLe68ZbsWZ&#43;rFonTHO6ppikKqCXoltg==" crossorigin="anonymous">
 <noscript><style>img.lazyload { display: none; }</style></noscript>
   <link rel="canonical" href="/projects/mirage/">
 
