--- a/projects/hermit/index.html
+++ b/projects/hermit/index.html
@@ -12,7 +12,7 @@
 </script>
 
 
-<link rel="stylesheet" href="/main.1a7cb924fb7002871042dc25a2ed898ae8a64fd770a7dfcb55ebed5385891db4f6a39ed3d2a9e83e9c222deebc65bb1667eac5a274c73baa698a42aa097a25b6.css" integrity="sha512-Gny5JPtwAocQQtwlou2JiuimT9dwp9/LVevtU4WJHbT2o57T0qnoPpwiLe68ZbsWZ&#43;rFonTHO6ppikKqCXoltg==" crossorigin="anonymous">
+<link rel="stylesheet" href="/main.c67c65ac3b8f3dd36fb1733ae47d184638fd88dc0f9623ab2d7bdf17a9c252d15c4106168da81dd6524d9a378f5bc2899bf91b3be8007f738715edb61e6f759b.css" integrity="sha512-xnxlrDuPPdNvsXM65H0YRjj9iNwPliOrLXvfF6nCUtFcQQYWjagd1lJNmjePW8KJm/kbO&#43;gAf3OHFe22Hm91mw==" crossorigin="anonymous">
 <noscript><style>img.lazyload { display: none; }</style></noscript>
   <link rel="canonical" href="/projects/hermit/">
 
